# boid-rs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MEDIAPIPE_SETUP.md  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml  mediapipe-ci.yml  test.yml
boid-client/: Cargo.toml
boid-client/src/: hand_tracker.rs  lib.rs  main.rs
boid-client/tests/: README.md  integration_test.rs
boid-core/: Cargo.toml
boid-core/src/: lib.rs
boid-embassy/: Cargo.toml  README.md  README_CAMERA.md  build.rs  cfg.toml.example  memory.x  rust-toolchain.toml
boid-embassy/.cargo/: config.toml
boid-embassy/src/: camera.rs  display.rs  http_server.rs  main.rs  wifi_config.rs
boid-esp32/: .env.example  Cargo.toml  README.md  README_CAMERA.md  README_QEMU.md  cfg.toml.example  run_qemu.sh  sdkconfig.defaults  sdkconfig.qemu
boid-esp32/src/: camera.rs  display.rs  http_server.rs  main.rs  rng.rs  types.rs
boid-hand-detector/: Cargo.toml
boid-hand-detector/src/: lib.rs
boid-mediapipe/: Cargo.toml  README.md  build.rs
boid-mediapipe/src/: lib.rs  wrapper.cpp  wrapper.h
boid-shared/: Cargo.toml
boid-shared/src/: lib.rs
boid-wasm/: Cargo.toml
boid-wasm/src/: hand_tracker.rs  lib.rs
boid-wasm/tests/: hand_detection.rs
boid-wasm/www/: hand_detection.js  index.html  index.js  package-lock.json  package.json  playwright.config.js
boid-wasm/www/tests/: pointer-tracking.spec.js
scripts/: build-mediapipe.sh
