[workspace]
members = [
    "boid-core",
    "boid-wasm",
    "boid-shared",
    "boid-client", "boid-hand-detector",
]
exclude = ["boid-esp32"]
# Note: boid-esp32 is intentionally excluded from the workspace
# It requires ESP toolchain and target, making it incompatible
# with standard workspace operations. Build it separately: cd boid-esp32 && cargo build
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Boid Contributors"]
license = "MIT"

[workspace.dependencies]
boid-core = { path = "boid-core" }
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# Profile settings for embedded builds (applies to all packages)
[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
