[package]
name = "boid-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "boid-client"
path = "src/main.rs"

[dependencies]
boid-shared = { path = "../boid-shared" }
opencv = { version = "0.92", default-features = false, features = ["clang-runtime"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
