[package]
name = "boid-embassy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
boid-core = { path = "../boid-core", default-features = false }
embassy-executor = { version = "0.6", features = ["arch-riscv32", "executor-thread"] }
embassy-time = { version = "0.3" }
embassy-sync = { version = "0.6" }
esp-hal = { version = "0.21", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.4" }
esp-backtrace = { version = "0.14", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.12", features = ["esp32c3", "log"] }
log = "0.4"
embedded-hal = "1.0"
embedded-hal-bus = "0.2"
embedded-graphics = "0.8"
display-interface = "0.5"
display-interface-spi = "0.5"
mipidsi = { version = "0.8", default-features = false }
static_cell = "2.1"
heapless = "0.8"
libm = "0.2"

[features]
default = ["esp32c3"]
esp32c3 = []
esp32c6 = []
