[package]
name = "boid-embassy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
boid-core = { path = "../boid-core", default-features = false }
boid-shared = { path = "../boid-shared", default-features = false }
embassy-executor = { version = "0.6", features = ["arch-xtensa", "executor-thread"] }
embassy-time = { version = "0.3" }
embassy-sync = { version = "0.6" }
embassy-net = { version = "0.4", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
esp-hal = { version = "0.21", features = ["esp32s3"] }
esp-hal-embassy = { version = "0.4" }
esp-backtrace = { version = "0.14", features = ["esp32s3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.12", features = ["esp32s3", "log"] }
esp-wifi = { version = "0.10", features = ["esp32s3", "embassy-net", "wifi"] }
log = "0.4"
embedded-hal = "1.0"
embedded-hal-bus = "0.2"
embedded-graphics = "0.8"
display-interface = "0.5"
display-interface-spi = "0.5"
mipidsi = { version = "0.8", default-features = false }
picoserve = { version = "0.13", features = [] }
static_cell = "2.1"
heapless = "0.8"
libm = "0.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6"

[features]
default = ["esp32s3"]
esp32s3 = []
esp32c3 = []
esp32c6 = []
