[package]
name = "boid-esp32"
version = "0.1.0"
edition = "2021"
authors = ["German Arutyunov <germanarutyunov@gmail.com>"]
license = "MIT"

[dependencies]
boid-core = { path = "../boid-core" }
boid-shared = { path = "../boid-shared", features = ["std"] }

# ESP-IDF and system dependencies
esp-idf-svc = { version = "0.49", features = ["binstart"] }
esp-idf-hal = "0.44"
esp-idf-sys = "0.35"

# Display support
embedded-hal = "1.0"
embedded-hal-bus = "0.2"
embedded-graphics = "0.8"
display-interface = "0.5"
display-interface-spi = "0.5"
mipidsi = { version = "0.8", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
log = "0.4"
anyhow = "1.0"

[build-dependencies]
embuild = "0.32"
toml-cfg = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["esp32s3"]
esp32s3 = []
esp32c3 = []
esp32c6 = []
# QEMU support - headless mode for CI/CD (no display, no camera)
qemu = []
# QEMU with emulated display - for local development only
qemu-display = ["qemu"]
