[package]
name = "boid-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
libm = "0.2"

[features]
default = ["std"]
std = ["serde/std", "serde_json", "serde_json?/std"]
