[package]
name = "boid-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
boid-core = { workspace = true }
boid-shared = { path = "../boid-shared" }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlVideoElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "ImageData",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
